--- a/app/layouts/navbar/navbar.module.css
+++ b/app/layouts/navbar/navbar.module.css
@@ -85,6 +85,71 @@
       transform-origin: bottom;
     }
 
+    &::after {
+      content: '';
+      position: absolute;
+      inset-inline-start: var(--spaceS);
+      inset-inline-end: var(--spaceS);
+      block-size: 4px;
+      background: #FF1493;
+      transform: scaleY(0) translateZ(0);
+      transform-origin: bottom;
+    }
+
+    @media (--mediaUseMotion) {
+      &::after {
+        transition: transform var(--durationM) var(--bezierFastoutSlowin);
+      }
+    }
+
+    &:hover::after,
+    &:active::after,
+    &[aria-current='page']::after {
+      transform: scaleY(1) translateZ(0);
+      transform-origin: top;
+    }
+  }
+
+  .navLinkImportant {
+    padding: var(--spaceM);
+    color: #FF1493;
+    font-weight: var(--fontWeightMedium);
+    font-size: var(--headerNavFontSize);
+    text-decoration: none;
+    position: relative;
+    transition: color var(--durationS) ease 0.1s;
+    line-height: 1;
+    display: inline-flex;
+    align-items: center;
+
+    &:hover,
+    &:active,
+    &[aria-current='page'] {
+      color: var(--textBody);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      inset-inline-start: var(--spaceS);
+      inset-inline-end: var(--spaceS);
+      block-size: 4px;
+      background: #FF1493;
+      transform: scaleY(0) translateZ(0);
+      transform-origin: bottom;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      inset-inline-start: var(--spaceS);
+      inset-inline-end: var(--spaceS);
+      block-size: 4px;
+      background: #FF1493;
+      transform: scaleY(0) translateZ(0);
+      transform-origin: bottom;
+    }
+
     @media (--mediaUseMotion) {
       &::after {
         transition: transform var(--durationM) var(--bezierFastoutSlowin);
@@ -180,6 +245,64 @@
     text-align: center;
     text-decoration: none;
     color: var(--textBody);
+    padding: var(--spaceL);
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: var(--durationS);
+    transition-timing-function: var(--bezierFastoutSlowin);
+    transition-delay: var(--transitionDelay);
+    position: relative;
+    top: calc(var(--spaceM) * -1);
+
+    @media (--mediaUseMotion) {
+      transition-property: transform, opacity;
+      transform: translate3d(0, calc(var(--spaceXL) * -1), 0);
+    }
+
+    @media (max-width: 820px) and (max-height: 420px) {
+      top: auto;
+    }
+
+    @media (--mediaMobileS), (max-height: 360px) {
+      --headerNavFontSize: calc((18 / 16) * 1rem);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: var(--space3XL);
+      left: var(--space3XL);
+      height: 4px;
+      background: #FF1493;
+      transform: scaleX(0) translateY(-1px);
+      transform-origin: right;
+    }
+
+    @media (--mediaUseMotion) {
+      &::after {
+        transition: transform var(--durationM) var(--bezierFastoutSlowin);
+      }
+    }
+
+    &:hover::after,
+    &:active::after,
+    &:focus::after {
+      transform: scaleX(1) translateY(-1px);
+      transform-origin: left;
+    }
+
+    &[data-visible='true'] {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  .mobileNavLinkImportant {
+    width: 100%;
+    font-size: var(--headerNavFontSize);
+    text-align: center;
+    text-decoration: none;
+    color: #FF1493;
     padding: var(--spaceL);
     opacity: 0;
     transition-property: opacity;
